<resources>
    <string name="app_name">AndroChef - FireBaseLearning</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="do_not_have_have_an_account">Do not Have Have An Account ?</string>
    <string name="register">REGISTER</string>
    <string name="androchef_firebaseauth">AndroChef FireBaseAuth</string>
    <string name="title_activity_email_login">EmailLoginActivity</string>
    <string name="login_with_email">Login With Email</string>
    <string name="login_with_phone">Login With Phone</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_gmail">Login With Gmail</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="login_with_github">Login With Github</string>
    <string name="www_androchef_com">www.androchef.com</string>
    <string name="firebase_auth">FIREBASE AUTH</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_city">Enter City</string>
    <string name="http_androchef_com">http://androchef.com</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="we_will_send_you_an_otp_to_verify_your_number">We will send you an otp to verify your number</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="please_enter_your_details">Please Enter Your Details</string>
    <string name="thank_you_for_making_an_account">Thank you for making an account .</string>




    //FaceBook Credential
    <string name="facebook_app_id"></string>  Add Your App Id Here
    <string name="fb_login_protocol_scheme"></string> Add Your Login Protocol Scheme Here

</resources>
