<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:weightSum="10">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.0"
        android:padding="10dp"
        android:src="@drawable/androcheflogo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/androchef_firebaseauth"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_person_orange_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_name"
            android:lines="1"
            android:imeOptions="actionNext"
            android:textColor="#666666"
            android:textSize="15sp"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:lines="1"
            android:imeOptions="actionNext"
            android:drawableStart="@drawable/ic_email_orange_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email"
            android:textColor="#666666"
            android:textSize="15sp"
            tools:ignore="NestedWeights" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:lines="1"
            android:imeOptions="actionNext"
            android:drawableStart="@drawable/ic_lock_orange_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="#666666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_location_city_orange_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_city"
            android:lines="1"
            android:imeOptions="actionNext"
            android:textColor="#666666"
            android:textSize="15sp"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/register"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="#123456" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/bg_button_blue"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>