<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed">


    <TextView
        android:id="@+id/btn_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/orange"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/login_with_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/btn_login_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_marginEnd="32dp"
        android:background="@color/lightGreen"
        android:padding="10dp"
        android:text="@string/login_with_phone"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_email" />

    <TextView
        android:id="@+id/btn_login_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/facebook_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_with_facebook"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_github" />

    <TextView
        android:id="@+id/btn_login_gmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_with_gmail"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_phone" />

    <TextView
        android:id="@+id/btn_login_twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/twitter_color"
        android:gravity="center"

        android:padding="10dp"
        android:text="@string/login_with_twitter"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_gmail" />

    <TextView
        android:id="@+id/btn_login_github"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_with_github"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_twitter" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_email"
        app:layout_constraintStart_toStartOf="@+id/btn_login_email"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/androcheflogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/www_androchef_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/firebase_auth"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_gmail"
        app:layout_constraintStart_toStartOf="@+id/btn_login_gmail"
        app:layout_constraintTop_toTopOf="@+id/btn_login_gmail"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_github"
        app:layout_constraintStart_toStartOf="@+id/btn_login_github"
        app:layout_constraintTop_toTopOf="@+id/btn_login_github"
        app:srcCompat="@drawable/github" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_twitter"
        app:layout_constraintStart_toStartOf="@+id/btn_login_twitter"
        app:layout_constraintTop_toTopOf="@+id/btn_login_twitter"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_facebook"
        app:layout_constraintStart_toStartOf="@+id/btn_login_facebook"
        app:layout_constraintTop_toTopOf="@+id/btn_login_facebook"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login_email"
        app:layout_constraintStart_toStartOf="@+id/btn_login_email"
        app:layout_constraintTop_toTopOf="@+id/btn_login_email"
        app:srcCompat="@drawable/ic_email_white_24dp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/btn_login_phone"
        app:layout_constraintTop_toTopOf="@+id/btn_login_phone"
        app:srcCompat="@drawable/ic_local_phone_white_24dp" />
</android.support.constraint.ConstraintLayout>